<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewmodel"
            type="com.whattowhere.ui.post.publishPost.PublishPostViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.post.publishPost.PublishPostActivity">

        <com.whattowhere.ui.customView.CustomToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:isBackArrowVisible="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/size20"
                android:paddingTop="@dimen/size10"
                android:paddingEnd="@dimen/size20"
                android:paddingBottom="@dimen/size10">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cvPost"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/size20"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:id="@+id/ivPost"
                        android:layout_height="@dimen/size400"
                        android:scaleType="centerCrop"
                        tools:background="@color/black" />
                </com.google.android.material.card.MaterialCardView>

                <com.whattowhere.ui.customView.CustomTextInputLayout
                    android:id="@+id/tilEnterCaption"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size100"
                    android:layout_marginTop="@dimen/size20"
                    app:boxBackgroundColor="@color/grey_hint"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="@dimen/size0"
                    app:layout_constraintTop_toBottomOf="@id/cvPost">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edtEnterCaption"
                        style="@style/editText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="start"
                        android:hint="@string/lbl_enter_caption"
                        android:inputType="textMultiLine"
                        android:padding="@dimen/size15"

                        android:textColorHint="@color/black"
                        app:textStyle="dm_normal" />
                </com.whattowhere.ui.customView.CustomTextInputLayout>

                <LinearLayout
                    android:id="@+id/ll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size10"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tilEnterCaption">

                    <com.whattowhere.ui.customView.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_inspiration"
                        android:textSize="@dimen/text_size_16sp"
                        app:textStyle="dm_normal" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        style="@style/Widget.App.Switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/size20"
                        android:buttonTint="@color/color_primary"
                        android:checked="false"
                        android:thumb="@drawable/ic_switch_thumn"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <com.whattowhere.ui.customView.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_review"
                        android:textSize="@dimen/text_size_16sp"
                        app:textStyle="dm_normal" />
                </LinearLayout>

                <com.google.android.material.checkbox.MaterialCheckBox
                    style="@style/checkBoxStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:fontFamily="@font/dm_sans_regular"
                    android:text="@string/lbl_private"
                    android:textSize="@dimen/text_size_16sp"
                    app:layout_constraintBottom_toBottomOf="@id/ll"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1"
                    app:layout_constraintStart_toEndOf="@id/ll"
                    app:layout_constraintTop_toTopOf="@id/ll" />

                <com.whattowhere.ui.customView.CustomTextView
                    android:id="@+id/tvPublish"
                    style="@style/button"
                    rectDrawable="@{15f}"
                    android:layout_marginTop="@dimen/size10"
                    android:text="@string/lbl_publish"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ll"
                    app:rectColor="@{@color/black}"
                    app:textStyle="dm_normal"
                    tools:background="@color/black" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>